<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/onboarding_background"
    tools:context=".ui.OnBoardingActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/onboarding_title"
        android:textColor="@color/secondary2_50"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/onboarding_desc_1"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/onboarding_desc_2"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/primary100"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="16sp"
            android:text="@string/login"
            android:layout_marginEnd="85dp"/>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="16sp"
            android:text="@string/register"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>