<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ExerciseGoalsActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/exercise_goals_graphic1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/greeting_4"
            android:textAlignment="center"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/exercise_goals_desc"
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_mengurangiBeratBadan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/secondary_100"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/exercise_goals_selection_1"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_menambahBeratBadan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/secondary_100"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/exercise_goals_selection_2"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_jagaMasaOtot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/secondary_100"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/exercise_goals_selection_3"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <Button
            android:visibility="gone"
            android:id="@+id/btn_next"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primary100"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/next"
            android:textSize="16sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/exercise_goals_graphic2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>