<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    tools:context=".ui.RegisterActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="10dp">

                        <TextView
                            android:id="@+id/register"
                            android:layout_marginTop="50dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/daftar"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="32sp" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:fontFamily="@font/montserrat_semibold"
                            android:text="@string/greeting3"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginStart="16dp"
                            android:fontFamily="@font/opensans_semibold"
                            android:text="@string/greeting4"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/opensans_semibold"
                            android:text="@string/username"
                            android:textSize="16sp"
                            android:layout_marginTop="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginBottom="8dp"/>
                        <com.capstone_bangkit.fitnessist.customview.NormalEditText
                            android:id="@+id/edt_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text"
                            android:maxLines="1"
                            android:padding="12dp"
                            android:layout_marginHorizontal="16dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/opensans_semibold"
                            android:text="@string/name"
                            android:textSize="16sp"
                            android:layout_marginStart="16dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="8dp"/>
                        <com.capstone_bangkit.fitnessist.customview.NormalEditText
                            android:id="@+id/edt_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text"
                            android:maxLines="1"
                            android:padding="12dp"
                            android:layout_marginHorizontal="16dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/opensans_semibold"
                            android:text="@string/email"
                            android:textSize="16sp"
                            android:layout_marginStart="16dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="8dp"/>

                        <com.capstone_bangkit.fitnessist.customview.EmailEditText
                            android:id="@+id/edt_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:background="@drawable/edit_text"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:padding="12dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/opensans_semibold"
                            android:text="@string/password"
                            android:textSize="16sp"
                            android:layout_marginStart="16dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="8dp"/>
                        <com.capstone_bangkit.fitnessist.customview.PasswordEditText
                            android:id="@+id/edt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text"
                            android:maxLines="1"
                            android:inputType="textPassword"
                            android:padding="12dp"
                            android:layout_marginHorizontal="16dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/opensans_semibold"
                            android:text="@string/passconf"
                            android:textSize="16sp"
                            android:layout_marginStart="16dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="8dp"/>
                        <com.capstone_bangkit.fitnessist.customview.PassConfirmEditText
                            android:id="@+id/edt_passConf"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text"
                            android:maxLines="1"
                            android:inputType="textPassword"
                            android:padding="12dp"
                            android:layout_marginHorizontal="16dp"/>

                        <Button
                            android:id="@+id/btn_register"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:backgroundTint="@color/primary100"
                            android:fontFamily="@font/opensans_semibold"
                            android:text="@string/register"
                            android:textSize="16sp"
                            android:layout_marginHorizontal="16dp"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="16dp"
                            android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:fontFamily="@font/opensans_semibold"
                                    android:text="@string/already_have_an_account"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/btn_login"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/opensans_semibold"
                                    android:text="@string/login"
                                    android:textSize="14sp"
                                    android:layout_marginStart="4dp"
                                    android:textColor="@color/birumuda"
                                    android:textStyle="bold"
                                    android:layout_marginBottom="70dp"/>
                        </LinearLayout>
                </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>